# rattletat.com

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
web/: Dockerfile  Dockerfile.prod  entrypoint.sh  package-lock.json  pyproject.toml
web/apps/blog/: admin.py  feed.py  forms.py  models.py  urls.py  views.py
web/apps/blog/migrations/: 0002_auto_20200713_2218.py  0003_auto_20200713_2323.py  0004_auto_20210305_0002.py  0005_auto_20210305_0030.py  0006_postcomponent_title.py  0007_remove_postcomponent_title.py  0008_auto_20210305_0143.py  0009_auto_20210305_0219.py  0010_auto_20210305_0240.py  0011_auto_20210306_1704.py  0012_post_image.py  0013_auto_20221021_2237.py  0014_auto_20221021_2237.py  0015_auto_20221022_1138.py  0016_auto_20221022_1139.py  0017_post_fediverse_post.py
web/apps/blog/static/blog/css/: colors.css  comments.css  prism.css
web/apps/blog/static/blog/js/: fedicomments.js  prism.js
web/apps/blog/templatetags/: post_to_js.py
web/apps/blog/utils/: markdown_prism.py
web/apps/events/: models.py  urls.py  views.py
web/apps/events/migrations/: 0001_initial.py  0002_event_tags.py
web/apps/events/templatetags/: event_to_js.py
web/apps/projects/: admin.py  models.py  urls.py  views.py
web/apps/projects/migrations/: 0001_initial.py  0003_auto_20200713_2252.py  0004_auto_20200713_2323.py  0006_auto_20210305_0002.py  0007_auto_20221021_2239.py  0008_project_slug.py
web/config/: urls.py  wsgi.py
web/config/settings/: base.py  local.py  production.py
web/static/css/: base.css  colors.css  comments.css  details.css  markdown.css
web/static/js/: dark_switch.js  mode-switcher.js
web/staticfiles/blog/css/: base.css  colors.css
web/staticfiles/blog/js/: graph.js  prism.js
web/staticfiles/css/: base.css  colors.css
web/staticfiles/startpage/css/: base.css
web/templates/: base.html  footer.html  head.html  navbar.html
web/templates/blog/: base.html  comments.html  components.html  footer.html  index.html  post.html  title.html
web/templates/events/: base.html  footer.html  index.html  post.html  title.html
web/templates/flatpages/: default.html
web/templates/projects/: card.html  component.html  detail.html  index.html
web/templates/startpage/: base.html  hero.html  startpage.html
web/templatetags/: active.py
(+71 files in other folders)
